# nominatim-rs

./: .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md
examples/: lookup.rs  lookup_expected.json  reverse.rs  search.rs  search_expected.json
src/: client.rs  lib.rs  lookup.rs  reverse.rs  search.rs  serde_utils.rs  types.rs  util.rs
src/search/: mod.rs  request.rs  response.rs
tests/: reverse.rs  reverse_expected.json  search.rs
