[package]
name = "nominatim-rs"
version = "0.1.0"
edition = "2018"
license = "MIT or Apache-2.0"
description = "Bindings to the Nominatim web API for rust"
repository = "https://gitlab.com/john_t/nominatim-rs"
keywords = ["api", "nominatim", "osm", "geolocation"]
categories = ["api-bindings"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_urlencoded = "0.7"
url = "2"
derive_builder = "0.10"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
